--- a/style/userRegister.css
+++ b/style/userRegister.css
@@ -25,7 +25,8 @@ body.dark-mode {
 /* Navbar */
 nav {
     display: flex;
-    align-items: center;
+    align-items: center; 
+    justify-content: space-between; 
     height: 90px;
     box-shadow: 0 4px 6px -2px rgba(0, 0, 0, 0.3);
     background-color: #3c5672;
@@ -50,9 +51,8 @@ nav {
 }
 
 .nav-right {
-    margin-left: auto; 
     display: flex;
-    margin-top: 40px;
+    align-items: center;
     height: 100%;
 }
 
@@ -505,8 +505,21 @@ body.dark-mode .pop-up {
 
 /* Adicionando regras para o loader e fundo em telas menores */
 @media (max-width: 480px) {
+
     .simple-loader {
         width: 40px; 
         height: 40px;
+    }
+
+    nav {
+        padding: 0 10px;
+    }
+
+    .nav-left h1 {
+        font-size: 1.1rem;
+    }
+
+    .register-form {
+        width: 95%;
     }
 }
