--- a/style/loginManagement.css
+++ b/style/loginManagement.css
@@ -394,6 +394,20 @@ body.dark-mode .form-password a {
     animation: swing 0.6s ease-in-out;
 }
 
+.shake-popUp {
+    animation: swing 0.6s ease-in-out;
+}
+
+@keyframes swing {
+    0% { transform: rotate(0deg); }
+    15% { transform: rotate(10deg); }
+    30% { transform: rotate(-10deg); }
+    45% { transform: rotate(5deg); }
+    60% { transform: rotate(-5deg); }
+    75% { transform: rotate(2deg); }
+    100% { transform: rotate(0deg); }
+}
+
 .pop-up-redirection {
     position: absolute;
     display: none;
