--- a/style/userRegister.css
+++ b/style/userRegister.css
@@ -466,6 +466,20 @@ body.dark-mode .pop-up {
     cursor: pointer;
 }
 
+.shake-popUp {
+    animation: swing 0.6s ease-in-out;
+}
+
+@keyframes swing {
+    0% { transform: rotate(0deg); }
+    15% { transform: rotate(10deg); }
+    30% { transform: rotate(-10deg); }
+    45% { transform: rotate(5deg); }
+    60% { transform: rotate(-5deg); }
+    75% { transform: rotate(2deg); }
+    100% { transform: rotate(0deg); }
+}
+
 /* LOADING */
 .simple-loader {
     position: fixed;
