--- a/style/home.css
+++ b/style/home.css
@@ -1,40 +1,107 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
-body {
-    font-family: "Roboto", sans-serif;
+/* Reset e estilos básicos */
+* {
+    box-sizing: border-box;
     margin: 0;
     padding: 0;
-    background-color: #fff;
+    font-family: Arial, sans-serif;
 }
 
+body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    background-color: #f2f2f2;
+    transition: background-color 0.3s, color 0.3s;
+}
+
+body.dark-mode {
+    background-color: #121212;
+    color: #e0e0e0;
+}
+
+/* Navbar */
 nav {
     display: flex;
-    align-items: center;
-    height: 70px;
+    align-items: center; 
+    justify-content: space-between; 
+    height: 90px;
     box-shadow: 0 4px 6px -2px rgba(0, 0, 0, 0.3);
     background-color: #3c5672;
     width: 100%;
     padding: 0 20px;
+    position: fixed;
+    top: 0;
+    z-index: 9;
 }
 
-nav ul {
-    list-style: none;
+.nav-left {
     display: flex;
-    justify-content: center;
-    padding: 0;
+    align-items: center;
 }
 
-nav ul li {
-    margin: 0 10px;
-}
-
-nav ul li a {
-    text-decoration: none;
-    font-weight: bold;
+.nav-left h1 {
+    color: #f2f2f2;
+    font-family: Roboto, sans-serif;
     text-transform: uppercase;
     font-size: 1.3rem;
-    color: #fff;
     letter-spacing: 0.1em;
+}
+
+.nav-right {
+    display: flex;
+    align-items: center; 
+    height: 100%; 
+}
+
+
+body.dark-mode nav {
+    background-color: #1c1c1c;
+}
+
+.checkbox {
+    position: absolute;
+    opacity: 0;
+}
+
+nav .label {
+    background-color: #111;
+    border-radius: 50px;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 5px;
+    position: relative;
+    height: 30px;
+    width: 55px;
+    transform: scale(0.9);
+}
+
+.label .ball {
+    background-color: #fff;
+    border-radius: 50%;
+    position: absolute;
+    top: 2px;
+    left: 2px;
+    height: 25px;
+    width: 25px;
+    transform: translateX(0px);
+    transition: transform 0.2s linear;
+}
+
+.checkbox:checked + .label .ball {
+    transform: translateX(24px);
+}
+
+.bi-brightness-high-fill {
+    color: #f1c40f;
+}
+
+.bi-moon-fill {
+    color: #fff;
 }
 
 .observation {
@@ -43,7 +110,7 @@ nav ul li a {
     padding: 20px;
 }
 
-h1, p, a {
+.container h1, p, a {
     margin-bottom: 8px;
 }
 
